backdrop prevent wrap scroll

--- a/components/AboutMeExtended.module.scss
+++ b/components/AboutMeExtended.module.scss
@@ -1,9 +1,14 @@
 .backdrop {
-    background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(6px);
+    display: none;
+
+    &.active {
+        display: block;
+    }
 }
